css updating, font styles, animations added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/CSS/style-reset.CSS">
+    <link rel="stylesheet" href="/assets/CSS/style-reset.CSS">
     <link rel="stylesheet" href="assets/CSS/style.CSS">
     <title>Brent Houston Portfolio</title>
+    <link rel="stylesheet" href="https://use.typekit.net/lhy8ccj.css">
 </head>
 <body>
     <Header>
         <H1>Brent Houston</H1>
+        <figure>
+            <img id="port"src="/Images/Head2.png" alt="Head-shot of Brent Houston">
+        </figure>
         <ul>
             <li><a href="#about">about</a></li>
             <li><a href="#work">work</a></li>
@@ -18,9 +22,7 @@
         </ul>
     </Header>
     <main>
-        <figure>
-            <img id="port"src="assets/Images/Head2.png" alt="Head-shot of Brent Houston">
-        </figure>
+       
         <section>
             <article class="flex-container">
                 <div id="about" class="left">
@@ -42,18 +44,26 @@
                 <div id="thumbnail" class="right">
                     <div>  
                         <div class="card">
-                            <img src="assets/Images/cssCheat.jpg" alt="Thumbnail of an application">
+                            <header><h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p></header>
+                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
-                            <img src="assets/Images/crabby.jpg" alt="Thumbnail of an application">
+                            <header><h4>Crabby's Website</h4><br><p class="cardflag">HTML,CSS</p></header>
+                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
                     <div>
                         <div class="card">
-                            <img src="assets/Images/preWSG.jpg" alt="Thumbnail of an application">
+                            <header>
+                                <h4>Prework Study Guide</h4><br><p class="cardflag">HTML,CSS</p>
+                            </header>
+                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/preWSG.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
-                            <img src="assets/Images/HFthumb.jpg" alt="">
+                            <header>
+                                <h4>Contractors Website</h4><br><p class="cardflag">HTML,CSS</p>
+                            </header>
+                            <a id="cardlink" href="https://brenthouston.github.io/HoustonFolk/"></a><img src="/Images/HFthumb.jpg" alt="Thumbnail of an application"></div>
                         </div>
                     </div>
                 </div>
