--- a/index.html
+++ b/index.html
@@ -43,27 +43,29 @@
                 </div>
                 <div id="thumbnail" class="right">
                     <div>  
-                        <div class="card">
+                        <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
                             <header><h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p></header>
-                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
+                            <img src="/Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
+                            <a href="https://brenthouston.github.io/HoustonFolk/">
                             <header><h4>Crabby's Website</h4><br><p class="cardflag">HTML,CSS</p></header>
-                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/crabby.jpg" alt="Thumbnail of an application"></a>
+                            <img src="/Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
                     <div>
                         <div class="card">
+                            <a href="https://brenthouston.github.io/HoustonFolk/">
                             <header>
                                 <h4>Prework Study Guide</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
-                            <a href="https://brenthouston.github.io/HoustonFolk/"><img src="/Images/preWSG.jpg" alt="Thumbnail of an application"></a>
+                            <img src="/Images/preWSG.jpg" alt="Thumbnail of an application"></a>
                         </div>
-                        <div class="card">
+                        <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
                             <header>
                                 <h4>Contractors Website</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
-                            <a id="cardlink" href="https://brenthouston.github.io/HoustonFolk/"></a><img src="/Images/HFthumb.jpg" alt="Thumbnail of an application"></div>
+                            <img src="/Images/HFthumb.jpg" alt="Thumbnail of an application"></div></a>
                         </div>
                     </div>
                 </div>
