--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 </div>
                 <div id="thumbnail" class="right">
                     <div>  
-                        <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
+                        <div class="card"><a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
                             <header><h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p></header>
                             <img src="/Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
-                            <a href="https://brenthouston.github.io/HoustonFolk/">
-                            <header><h4>Crabby's Website</h4><br><p class="cardflag">HTML,CSS</p></header>
+                            <a href="https://brenthouston.github.io/MiniProject/">
+                            <header><h4>1 Hour Website Challenge</h4><br><p class="cardflag">HTML,CSS</p></header>
                             <img src="/Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
                     <div>
                         <div class="card">
-                            <a href="https://brenthouston.github.io/HoustonFolk/">
+                            <a href="https://brenthouston.github.io/prework-study-guide/">
                             <header>
                                 <h4>Prework Study Guide</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
