--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <Header>
         <H1>Brent Houston</H1>
         <figure>
-            <img id="port"src="../Images/Head2.png" alt="Head-shot of Brent Houston">
+            <img id="port"src="Images/Head2.png" alt="Head-shot of Brent Houston">
         </figure>
         <ul>
             <li><a href="#about">about</a></li>
@@ -50,7 +50,7 @@
                         <div class="card">
                             <a href="https://brenthouston.github.io/MiniProject/">
                             <header><h4>1 Hour Website Challenge</h4><br><p class="cardflag">HTML,CSS</p></header>
-                            <img src="../Images/crabby.jpg" alt="Thumbnail of an application"></a>
+                            <img src="Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
                     <div>
@@ -59,13 +59,13 @@
                             <header>
                                 <h4>Prework Study Guide</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
-                            <img src="../Images/preWSG.jpg" alt="Thumbnail of an application"></a>
+                            <img src="Images/preWSG.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
                             <header>
                                 <h4>Contractors Website</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
-                            <img src="../Images/HFthumb.jpg" alt="Thumbnail of an application"></div></a>
+                            <img src="Images/HFthumb.jpg" alt="Thumbnail of an application"></div></a>
                         </div>
                     </div>
                 </div>
