--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div>  
                         <div class="card"><a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
                             <header><h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p></header>
-                            <img src="/Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
+                            <img src="images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
                             <a href="https://brenthouston.github.io/MiniProject/">
