--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
                 <div id="thumbnail" class="right">
                     <div>  
                         <div class="card"><a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
-                            <header><h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p></header>
-                            <img src="images/cssCheat.jpg" alt="Thumbnail of an application"></a>
+                            <header>
+                                <h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p>
+                            </header>
+                            <img src="Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
                             <a href="https://brenthouston.github.io/MiniProject/">
-                            <header><h4>1 Hour Website Challenge</h4><br><p class="cardflag">HTML,CSS</p></header>
+                            <header>
+                                <h4>1 Hour Website Challenge</h4><br><p class="cardflag">HTML,CSS</p>
+                            </header>
                             <img src="Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
