--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </div>
                 <div id="thumbnail" class="right">
                     <div>  
-                        <div class="card"><a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
+                        <div class="card">
+                            <a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
                             <header>
                                 <h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p>
                             </header>
