box-shadow resize

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card">
                             <a href="https://brenthouston.github.io/prework-study-guide/">
                             <header>
-                                <h4>Prework Study Guide</h4><br><p class="cardflag">HTML,CSS</p>
+                                <h4>Prework Study Guide</h4><p class="cardflag">HTML,CSS</p>
                             </header>
                             <img src="Images/preWSG.jpg" alt="Thumbnail of an application"></a>
                         </div>
