--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                         <div class="card">
                             <a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
                             <header>
-                                <h4>CSS Snippet Cheatsheet</h4><br><p class="cardflag">HTML,CSS</p>
+                                <h4>CSS Snippet Cheatsheet</h4><p class="cardflag">HTML,CSS</p>
                             </header>
                             <img src="Images/cssCheat.jpg" alt="Thumbnail of an application"></a>
                         </div>
                         <div class="card">
                             <a href="https://brenthouston.github.io/MiniProject/">
                             <header>
-                                <h4>1 Hour Website Challenge</h4><br><p class="cardflag">HTML,CSS</p>
+                                <h4>1 Hour Website Challenge</h4><p class="cardflag">HTML,CSS</p>
                             </header>
                             <img src="Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
                             <header>
-                                <h4>Contractors Website</h4><br><p class="cardflag">HTML,CSS</p>
+                                <h4>Contractors Website</h4><p class="cardflag">HTML,CSS</p>
                             </header>
                             <img src="Images/HFthumb.jpg" alt="Thumbnail of an application"></div></a>
                         </div>
