navbar hover class add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <figure>
             <img id="port"src="Images/Head2.png" alt="Head-shot of Brent Houston">
         </figure>
-        <ul>
+        <ul class="navbar">
             <li><a href="#about">about</a></li>
             <li><a href="#work">work</a></li>
             <li><a href="#cnt">contact</a></li>
