added github link to repository

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <h3>Contact Me</h3>
                 </div>
                 <div id="cnt" class="right">
-                    <ul>
+                    <ul class="navbar">
                         <li>773.988.2768</li>
-                        <li>Tacoma, WA</li>
+                        <li><a href="https://github.com/brenthouston">Github</a></li>
                         <li>brentjustinhouston@gmail.com</li>
                     </ul>
                 </div>
