--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
         </ul>
     </Header>
     <main>
-       
-        <section>
             <article class="flex-container">
                 <div id="about" class="left">
                     <h3>About Me</h3>
@@ -37,12 +35,17 @@
     
                 </div>
             </article>
+
+
+
             <section class="flex-container">
                 <div id="work" class="left">
                     <h3>My Work</h3>
                 </div>
-                <div id="thumbnail" class="right">
-                    <div>  
+
+
+                <div class="right">
+                    <div class="box1"> 
                         <div class="card">
                             <a href="https://brenthouston.github.io/CSS-Cheet-Sheet/">
                             <header>
@@ -58,7 +61,7 @@
                             <img src="Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
                     </div>
-                    <div>
+                    <div class="box2">
                         <div class="card">
                             <a href="https://brenthouston.github.io/prework-study-guide/">
                             <header>
@@ -66,7 +69,8 @@
                             </header>
                             <img src="Images/preWSG.jpg" alt="Thumbnail of an application"></a>
                         </div>
-                        <div class="card"><a href="https://brenthouston.github.io/HoustonFolk/">
+                        <div class="card">
+                            <a href="https://brenthouston.github.io/HoustonFolk/">
                             <header>
                                 <h4>Contractors Website</h4><p class="cardflag">HTML,CSS</p>
                             </header>
@@ -75,6 +79,9 @@
                     </div>
                 </div>
             </section>
+
+
+
             <article class="flex-container">
                 <div class="left">
                     <h3>Contact Me</h3>
@@ -87,7 +94,6 @@
                     </ul>
                 </div>
             </article>
-        </section>
     </main>
 </body>
 </html>
