card title change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="card">
                             <a href="https://brenthouston.github.io/MiniProject/">
                             <header>
-                                <h4>1 Hour Website Challenge</h4><p class="cardflag">HTML,CSS</p>
+                                <h4>1 Hour Website Build</h4><p class="cardflag">HTML,CSS</p>
                             </header>
                             <img src="Images/crabby.jpg" alt="Thumbnail of an application"></a>
                         </div>
