--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#work">work</a></li>
                     <li><a href="#cnt">contact</a></li>
+                    <li> <a href="./Resume_BrentHouston_1.pages" target="_blank">Download my Resume</a></li>
+
                 </ul>
             </Header>
     <main>
@@ -102,5 +104,6 @@
                 </div>
             </article>
     </main>
+
 </body>
 </html>
