--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
                     <h3>About Me</h3>
                 </div>
                 <div class="right" >
-                    <p class="bio"> Hi, I'm Brent, an entrepreneur and fine arts graduate from The School of the Art Institute of Chicago. For over a decade, I owned and operated a successful picture framing business, building a loyal client base from scratch, managing the supply chain, and overseeing projects from end to end.</p>
-                    <br>
-                    <p class="bio">Drawing from my experiences as a collegiate baseball pitcher, I developed discipline, focus, and teamwork skills that have served me well in my entrepreneurial endeavors. I have also taught myself to successfully trade in the stock market, a passion that has taught me the value of careful analysis and risk management.</p>
-                    <br>
-                    <p class="bio">Recently, I've decided to pivot my career and pursue my passion for software engineering. With my experience in project management and creativity, I look forward to applying my skills to this new field and continuing to learn and grow.</p>
-    
-                </div>
+                    <p class="bio"> Front-End Developer: Currently at Sharp Hue, I specialize in PHP, WordPress, Shopify, HTML, CSS, JavaScript, and jQuery, with experience supporting ASP.NET web applications. As a University of Washington Software graduate and UX/UI Best in Class award recipient, I bring a solid technical foundation and a sharp eye for design. My experience as a small business owner developed essential skills in leadership, communication, and client management, enhancing my ability to collaborate effectively and deliver impactful solutions in web development.</p>
             </article>
 
     <!-- My Work -->
